--- a/css/style.css
+++ b/css/style.css
@@ -2,53 +2,22 @@
     margin: 0px;
     padding: 0px;
 }
-
 body, html { 
-    overflow:hidden; 
-    background: #000 url('../art/background.png');
+    /*overflow:hidden; */
+    background: #000 url('../art/stuz_bg.png');
 } 
 #cr-stage { 
     margin: 0 auto; 
-    border: solid 1px #231f20;
+    position: relative;
+    width: 1024px;
+    height: 768px;
+    /*border: solid 1px #231f20;*/
 }
 .info{
     text-align: center;
 }
 .clear{
     clear:both;
-}
-#menu {
-    position: absolute;
-    left: 45%;
-    top: 40%;
-    z-index:3;
-}
-#menu>div {
-    font-size: 16px;
-    color: white;
-    text-shadow: 1px 1px green;    
-}
-#menu>div:hover {
-    color: #121212;
-    text-shadow: 1px 1px green; 
-}
-#dialog-score {
-    display: table;
-}
-#dialog-score>div {
-    width: 100%;
-    display: table-row;
-}
-#dialog-score>div>span {
-    padding-bottom: 5px;
-    display: table-cell;
-}
-#dialog-score>div>span.name {
-    width: 200px;
-}
-#dialog-score>div>span.score {
-    width: 250px;
-    text-align: right;
 }
 #loading {
     position: absolute;
@@ -57,43 +26,38 @@ body, html {
     z-index:3;
     text-shadow: 1px 2px green;
 }
-#stats {
-    background-image: url('../art/menu.png');  
-    background-repeat: no-repeat;    
-    background-position: left top;
-    position: absolute;
-    width: 436px;
-    height: 76px;
-    right: 32px;
-    top: 0px;
-    z-index: 4;
+#logo {
+    background: transparent url('../art/logo.png') no-repeat;
+    margin: 0 auto; 
+    width: 159px;
+    height: 53px;
 }
-#stats .left {
-    left: 0px;
-}
-#stats .timer {
-    right: 20px;
-    top: 8px;
-}
-#stats .carrots {
-    right: 285px;
-    top: 8px;
-}
-#stats .bottom {
-    bottom: -10px;
-    text-shadow: 1px 1px #121212;
-}
-div.text {
-    position: absolute;
-    line-height: 24px;
-    font-size: 16px;
+/* Menu */
+#version {
+    font-size: 10px;
     color: white;
-    padding: 5px;
-    text-shadow: 1px 1px #12AA12;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    padding-right: 4px;
+    padding-bottom: 2px;
 }
-div.text.center{
-    width:100%;
-    text-align: center;
+#menu {
+    position: absolute;
+    left: 195px;
+    top: 669px;
+    z-index:3;
+}
+#menu>div {
+    font-family: Tahoma, Sans-serif, Helvetica;
+    font-size: 18px;
+    color: white;
+    text-shadow: 1px 1px green;    
+    display: inline;
+}
+#menu>div:hover {
+    color: #121212;
+    text-shadow: 1px 1px green; 
 }
 #dialog-howto>h1 {
     font-size: 20px;
@@ -113,37 +77,50 @@ div.text.center{
     color: #12AA12;
     font-weight: bold;
 }
-/* Interface */
-#left-frame {
-    background-image: url('../art/left_frame.png');
-    background-repeat: no-repeat;
-    background-position: left top;
-    height: 768px;
+#dialog-score {
+    display: table;
+}
+#dialog-score>div {
     width: 100%;
-    position: relative;
-    left: -10px;
-    z-index: 2;
+    display: table-row;
 }
-#right-frame {
-    background-image: url('../art/right_frame.png');    
-    background-repeat: no-repeat;
-    background-position: right top;
-    height: 768px;
-    width: 48px;
-    position: absolute;
-    right: -16px;
-    top: 0;
-    z-index: 3;
+#dialog-score>div>span {
+    padding-bottom: 5px;
+    display: table-cell;
 }
-#bottom-frame {
-    background-image: url('../art/bottom_frame.png');    
-    background-repeat: no-repeat;
-    height: 48px;
-    width: 974px;
+#dialog-score>div>span.name {
+    width: 200px;
+}
+#dialog-score>div>span.score {
+    width: 250px;
+    text-align: right;
+}
+/* Game UI */
+#stats {
+    background-image: url('../art/menu.png');  
+    background-repeat: no-repeat;    
+    background-position: left top;
     position: absolute;
-    bottom: -12px;
-    left: 48px;
-    z-index: 2;
+    width: 436px;
+    height: 76px;
+    left: 32px;
+    top: 0px;
+    z-index: 4;
+}
+#stats .left {
+    left: 0px;
+}
+#stats .timer {
+    right: 20px;
+    top: 8px;
+}
+#stats .carrots {
+    right: 285px;
+    top: 8px;
+}
+#stats .bottom {
+    bottom: -10px;
+    text-shadow: 1px 1px #121212;
 }
 #fps {
     position: absolute;
@@ -151,3 +128,56 @@ div.text.center{
     left: 0;
     color: white;
 }
+div.text {
+    position: absolute;
+    line-height: 24px;
+    font-size: 16px;
+    color: white;
+    padding: 5px;
+    text-shadow: 1px 1px #12AA12;
+}
+div.text.center{
+    width:100%;
+    text-align: center;
+}
+/* Splash UI */
+#wrapper {
+    margin: 0 auto; 
+    width: 1120px;
+    height: 780px;
+    overflow: hidden;
+}
+#left-frame {
+    background-image: url('../art/left_frame.png');
+    background-repeat: no-repeat;
+    background-position: left top;
+    height: 780px;
+    width: 48px;
+    position: absolute;
+    margin-left: 20px;
+    top: 0;
+    z-index: 2;
+}
+#right-frame {
+    background-image: url('../art/right_frame.png');    
+    background-repeat: no-repeat;
+    background-position: right top;
+    height: 780px;
+    width: 48px;
+    position: absolute;
+    margin-left: 1052px;
+    top: 0;
+    z-index: 2;
+}
+#bottom-frame {
+    background-image: url('../art/bottom_frame.png');    
+    background-repeat: no-repeat;
+    height: 48px;
+    width: 974px;
+    position: absolute;
+    top: 0;
+    margin-left: 68px;
+    margin-top: 732px;
+    z-index: 2;
+}
+
