--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,8 @@
 body, html { 
     /*overflow:hidden; */
     background: #000 url('../art/stuz_bg.png');
+    font-family: Tahoma, Sans-serif, Helvetica;
 } 
-#cr-stage { 
-    margin: 0 auto; 
-    position: relative;
-    width: 1024px;
-    height: 768px;
-    /*border: solid 1px #231f20;*/
-}
 .info{
     text-align: center;
 }
@@ -26,21 +20,28 @@ body, html {
     z-index:3;
     text-shadow: 1px 2px green;
 }
+/* so, wroooooong! */
+#msgs {
+    position: absolute;
+    left: 35%;
+    top: 35%;
+    text-align: center;
+    z-index: 2;
+}
 #logo {
     background: transparent url('../art/logo.png') no-repeat;
     margin: 0 auto; 
     width: 159px;
     height: 53px;
+    position: relative;
 }
 /* Menu */
 #version {
     font-size: 10px;
     color: white;
     position: absolute;
-    right: 0px;
-    bottom: 0px;
-    padding-right: 4px;
-    padding-bottom: 2px;
+    bottom: 0;
+    right: 0;
 }
 #menu {
     position: absolute;
@@ -50,11 +51,12 @@ body, html {
     z-index:3;
 }
 #menu>div {
-    font-family: Tahoma, Sans-serif, Helvetica;
+    position: absolute;
     font-size: 18px;
     color: white;
     text-shadow: 1px 1px green;    
     display: inline;
+    cursor: pointer;
 }
 #menu>div:hover {
     color: #121212;
@@ -112,11 +114,11 @@ body, html {
     left: 0px;
 }
 #stats .timer {
-    right: 20px;
+    right: 100px;
     top: 8px;
 }
 #stats .carrots {
-    right: 285px;
+    right: 355px;
     top: 8px;
 }
 #stats .bottom {
@@ -137,16 +139,19 @@ div.text {
     padding: 5px;
     text-shadow: 1px 1px #12AA12;
 }
-div.text.center{
-    width:100%;
-    text-align: center;
-}
 /* Splash UI */
 #wrapper {
     margin: 0 auto; 
     width: 1120px;
     height: 780px;
     overflow: hidden;
+}
+#cr-stage { 
+    margin: 0 auto; 
+    position: relative;
+    width: 1024px;
+    height: 768px;
+    /*border: solid 1px #231f20;*/
 }
 #left-frame {
     background-image: url('../art/left_frame.png');
